--- a/vs2017/MainWindow.xaml
+++ b/vs2017/MainWindow.xaml
@@ -5,8 +5,32 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DeviceHostLinkMemo"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="DeviceHostLink" Height="450" Width="923.81">
     <Grid>
-        
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Left" Margin="10,0,0,10">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="10,0,0,10">
+                <Button Content="Load Data" Width="100" Margin="5" Click="LoadButton_Click"/>
+                <Button Content="Save Data" Width="100" Margin="5" Click="SaveButton_Click"/>
+            </StackPanel>
+            <DataGrid ItemsSource="{Binding DataItems}"
+                  AutoGenerateColumns="False"
+                  CanUserAddRows="False"
+                  Margin="10"
+                      >
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="SettingNo" Binding="{Binding SettingNo}" />
+                <DataGridTextColumn Header="SignalUnitNo" Binding="{Binding SignalUnitNo}" />
+                <DataGridTextColumn Header="SignalChannelNo" Binding="{Binding SignalChannelNo}" />
+                <DataGridTextColumn Header="SignalMemoryNo" Binding="{Binding SignalMemoryNo}" />
+                <DataGridTextColumn Header="SignalFrequency" Binding="{Binding SignalFrequency}" />
+                <DataGridTextColumn Header="SignalLength" Binding="{Binding SignalLength}" />
+                <DataGridTextColumn Header="TrigerFrequency" Binding="{Binding TrigerFrequency}" />
+                <DataGridTextColumn Header="TrigerBaseUnit" Binding="{Binding TrigerBaseUnit}" />
+                <DataGridTextColumn Header="TrigerShiftTime" Binding="{Binding TrigerShiftTime}" />
+                <DataGridTextColumn Header="SeriesName" Binding="{Binding SeriesName}" />
+            </DataGrid.Columns>
+        </DataGrid>
+        </StackPanel>
     </Grid>
+
 </Window>
